# solaris

./: .clang-format  .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
application/: CMakeLists.txt
application/source/: main.cpp
cmake/: dependencies.cmake
game/: CMakeLists.txt
game/resources/: triangle.frag  triangle.vert
game/source/: game.cpp  game.hpp  graphics.cpp  graphics.hpp  main.cpp  window.cpp  window.hpp
include/solaris/core/: bus.hpp  dispatcher.hpp  layer.hpp  layer_stack.hpp  queue.hpp
include/solaris/framework/: bus.hpp  dispatcher.hpp  layer.hpp  layer_stack.hpp  resources.hpp
solaris/: CMakeLists.txt
solaris/include/solaris/core/: layer.hpp
solaris/include/solaris/framework/: allocation.hpp  ecs.hpp  runtime_object.hpp  runtime_struct.hpp  runtime_vector.hpp
solaris/include/solaris/math/: matrix.hpp
test/: CMakeLists.txt
test/source/: ecs_test.cpp  math_tests.cpp  runtime_object_tests.cpp  runtime_struct_tests.cpp  runtime_vector_tests.cpp  test_components.hpp
